[project]
name = "genesis-jarvis"
version = "0.1.0"
description = "Genesis-Jarvis: Cerberus + OmniPalace + Hermes body — Iron Man style autonomous agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "ollama",
    "pydantic",
    "diff-match-patch",           # for Claw patches
    "pyyaml",
    "fastapi",                    # optional API
    "uvicorn",
]

[project.scripts]
jarvis = "run_jarvis:main"

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
]